--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <section class="main">
     <div class="container">
-        <h1 class="visually-hidden" >Taomlar Ro'yxati</h1>
+        <h1 class="visually-hidden" >Avtomobillar Ro'yxati</h1>
         <ul class="recipes-list">
             <li class="recipe-item">
                 <img src="rasmlar/cars-1.jpg" alt="cars-img" class="recipe-img">
